Corrected subheading left aligned rather than center

--- a/personalPortfolio/css/main.css
+++ b/personalPortfolio/css/main.css
@@ -17,6 +17,7 @@ p {
 
 #sub-heading {
   margin-top: -10px;
+  text-align: center;
 }
 
 #Home {
@@ -51,6 +52,7 @@ p {
   background-size: cover;
   height: 100vh;
   padding-top: 20px;
+  text-align: center;
 }
 
 .portfolio-thumbnails {
